# KG-Lab

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  README.md  ROADMAP.md  index.html  justfile  package.json  tailwind.config.js  vite.config.ts
backend/: pyproject.toml
backend/app/: embed.py  main.py  nlp.py  schemas.py
src/: App.tsx  index.css  theme.ts  vite-env.d.ts
src/components/: AnimatedThemeToggle.tsx  Badge.tsx  Card.tsx  ContentPanel.tsx  Header.tsx  HnswDiagram.tsx  KnowledgeGraphDiagram.tsx  Overview.tsx  Sidebar.tsx  TabPlaceholder.tsx  Tabs.tsx  ThemeProvider.tsx
src/components/playgrounds/: EmbeddingsPlayground.tsx  KgExplorerPlayground.tsx  PlaygroundShell.tsx  TextToStructurePlayground.tsx  WhereItLivesPlayground.tsx  index.ts  kgExplorerData.ts
src/data/: hnsw.ts  lessons.ts  modules.ts
src/lib/: api.ts  embeddings.ts
