[project]
name = "kg-lab-backend"
version = "0.1.0"
description = "KG Lab Python backend — NLP + embeddings + (later) the agent loop."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "spacy>=3.8",
    "en-core-web-sm",
    "sentence-transformers>=3.3",
]

[tool.uv.sources]
# spaCy's small English model, installed as a wheel.
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
